--- a/themes/phantom/dark/about.html
+++ b/themes/phantom/dark/about.html
@@ -69,7 +69,7 @@
                             <div class="col-xs-12 col-md-7">
                                 <div class="about-author">
                                     <figure class="author-thumb">
-                                        <img src="img/agung.jpg">
+                                        <img src="img/agung4.2.jpg">
                                         <!-- <img src="img/tm.jpg" style="width: 200px; height: 200px; border-radius: 10%;"> -->
                                     </figure>
                                     <div class="author-desc">
@@ -87,72 +87,142 @@
                                 <div class="section-title clear">
                                     <h3>Skills</h3>
                                 </div>
-                                <div class="skill-wrapper">
-                                    <div class="progress clear">
-                                        <div class="skill-name">Bootstrap</div>
-                                        <div class="skill-bar">
+                                <div class="skill col-lg-6 col-md-6 col-sm-6">
+                                    <div class="skill-content">
+                                        <img src="img/bootstrap.png" style="max-width: 250px;">
+                                        <div class="skill-text">
+                                            <h4>Bootstrap</h4>
+                                        </div>
+                                    </div>
+                                    <div class="skill-content">
+                                        <img src="img/vuetify.png" style="max-width: 90px;">
+                                        <div class="skill-text">
+                                            <h4>Vuetify</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill col-lg-6 col-md-6 col-sm-6">
+                                    <div class="skill-content">
+                                        <img src="img/php.png" style="max-width: 115px;">
+                                        <div class="skill-text">
+                                            <h4>PHP</h4>
+                                        </div>
+                                    </div>
+                                    <div class="skill-content">
+                                        <img src="img/MySQL.png" style="max-width: 150px;">
+                                        <div class="skill-text">
+                                            <h4>MySql</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill col-lg-6 col-md-6 col-sm-6">
+                                    <div class="skill-content">
+                                        <img src="img/CodeIgniter.png" style="max-width: 100px;">
+                                        <div class="skill-text">
+                                            <h4>CodeIgniter</h4>
+                                        </div>
+                                    </div>
+                                    <div class="skill-content">
+                                        <img src="img/laravel.png" style="max-width: 100px;">
+                                        <div class="skill-text">
+                                            <h4>Laravel</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill col-lg-6 col-md-6 col-sm-6">
+                                    <div class="skill-content">
+                                        <img src="img/VueJs.png" style="max-width: 100px;">
+                                        <div class="skill-text">
+                                            <h4>Vue.Js</h4>
+                                        </div>
+                                    </div>
+                                    <div class="skill-content">
+                                        <img src="img/Flutter.png" style="max-width: 130px;">
+                                        <div class="skill-text">
+                                            <h4>Flutter</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skill col-lg-6 col-md-6 col-sm-6">
+                                    <div class="skill-content">
+                                        <img src="img/XD.png" style="max-width: 70px;">
+                                        <div class="skill-text">
+                                            <h4>Adobe XD</h4>
+                                        </div>
+                                    </div>
+                                    <div class="skill-content" style="max-width: 70px;">
+                                        <img src="img/AI.png">
+                                        <div class="skill-text">
+                                            <h4>Illustrator</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="skill-wrapper"> -->
+                                    <!-- <div class="progress">
+                                        <div class="skill-name">Bootstrap</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="85%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">Vuetify</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">Vuetify</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="85%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">PHP</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">PHP</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="65%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="65%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">CodeIgniter</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">CodeIgniter</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="80%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="80%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">Laravel</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">Laravel</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="75%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="75%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">vuejs</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">vuejs</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="80%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="80%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">Flutter</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">Flutter</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="65%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="65%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">MySql</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">MySql</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
-                                    </div>
+                                        <div class="skill-lavel" data-skill-value="85%"></div> -->
+                                    <!-- </div>
                                     <div class="progress clear">
-                                        <div class="skill-name">Adobe XD</div>
-                                        <div class="skill-bar">
+                                        <div class="skill-name">Adobe XD</div> -->
+                                        <!-- <div class="skill-bar">
                                             <div class="bar"></div>
                                         </div>
-                                        <div class="skill-lavel" data-skill-value="85%"></div>
-                                    </div>
-                                </div> <!-- /.skill-wrapper -->
-                            </div> <!-- /.col -->
+                                        <div class="skill-lavel" data-skill-value="85%"></div> -->
+                                    <!-- </div> -->
+                                <!-- </div> /.skill-wrapper -->
+                            </div>
                             
                             <!-- <div class="col-xs-12 col-md-6">
                                 <div class="section-title clear">
