--- a/themes/phantom/dark/award.html
+++ b/themes/phantom/dark/award.html
@@ -69,6 +69,104 @@
                             <div class="row text-center">
                                 <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
                                     <div class="service-hex" id="service1">
+                                        <a href="documents/IPK Terbaik - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank" >
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+                                                <g>
+                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
+                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
+                                                </g>
+                                            </svg>
+                                            <div class="content"style="width: 160px;">
+                                                
+                                                <div class="icon">
+                                                    <i class="et-line icon-lightbulb"></i>
+                                                </div>
+                                                <h4>IPK Terbaik</h4>
+                                                <p>Mahasiswa berprestasi dengan IPK terbaik</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
+                                    <div class="service-hex" id="service1">
+                                        <a href="documents/Prestasi Akademik - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+                                                <g>
+                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
+                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
+                                                </g>
+                                            </svg>
+                                            <div class="content"style="width: 160px;">            
+                                                <div class="icon">
+                                                    <i class="et-line icon-mobile"></i>
+                                                </div>
+                                                <h4>Berprestasi<br>Akademik</h4>
+                                                <p>Penerima beasiswa TA 2018-2020</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
+                                    <div class="service-hex" id="service1">
+                                        <a href="documents/Prestasi Non Akademik - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+                                                <g>
+                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
+                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
+                                                </g>
+                                            </svg>
+                                            <div class="content"style="width: 160px;">            
+                                                <div class="icon">
+                                                    <i class="et-line icon-mobile"></i>
+                                                </div>
+                                                <h4>Berprestasi<br>Non-Akademik</h4>
+                                                <p>Penerima medali terbanyak</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div> 
+                            </div>
+                            <div class="row text-center">
+                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
+                                    <div class="service-hex" id="service1">
+                                        <a href="documents/Berprestasi Aktif - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+                                                <g>
+                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
+                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
+                                                </g>
+                                            </svg>
+                                            <div class="content"style="width: 160px;">                                               
+                                                <div class="icon">
+                                                    <i class="et-line icon-profile-male"></i>
+                                                </div>
+                                                <h4>Berprestasi<br>Aktif</h4>
+                                                <p>Mahasiswa teraktif dengan poin JSDP terbanyak (824)</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12" >
+                                    <div class="service-hex" id="service1">
+                                        <a href="documents/TOEIC - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
+                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
+                                                <g>
+                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
+                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
+                                                </g>
+                                            </svg>
+                                            <div class="content"style="width: 160px;">
+                                                <div class="icon">
+                                                    <i class="et-line icon-profile-male"></i>
+                                                </div>
+                                                <h4>Nilai TOEFL</h4>
+                                                <p>Nilai TOEFL sebesar 680</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12" >
+                                    <div class="service-hex" id="service1">
                                         <a href="documents/Prestasi 1 - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
                                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
                                                 <g>
@@ -86,6 +184,8 @@
                                         </a>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row text-center">
                                 <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12" >
                                     <div class="service-hex" id="service1">
                                         <a href="documents/Prestasi 2 - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
@@ -124,8 +224,6 @@
                                         </a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row text-center">
                                 <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
                                     <div class="service-hex" id="service1">
                                         <a href="documents/Prestasi 4 - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
@@ -145,85 +243,6 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
-                                    <div class="service-hex" id="service1">
-                                        <a href="documents/IPK Terbaik - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank" >
-                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
-                                                <g>
-                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
-                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
-                                                </g>
-                                            </svg>
-                                            <div class="content"style="width: 160px;">
-                                                
-                                                <div class="icon">
-                                                    <i class="et-line icon-lightbulb"></i>
-                                                </div>
-                                                <h4>IPK Terbaik</h4>
-                                                <p>Mahasiswa berprestasi dengan IPK terbaik</p>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
-                                    <div class="service-hex" id="service1">
-                                        <a href="documents/Prestasi Akademik & Non Akademik - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
-                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
-                                                <g>
-                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
-                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
-                                                </g>
-                                            </svg>
-                                            <div class="content"style="width: 160px;">            
-                                                <div class="icon">
-                                                    <i class="et-line icon-mobile"></i>
-                                                </div>
-                                                <h4>Berprestasi<br>Akademik dan <br> Non-Akademik</h4>
-                                                <p>Penerima beasiswa dan medali terbanyak</p>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12">
-                                    <div class="service-hex" id="service2">
-                                        <a href="documents/Berprestasi Aktif - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
-                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
-                                                <g>
-                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
-                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
-                                                </g>
-                                            </svg>
-                                            <div class="content"style="width: 160px;">                                               
-                                                <div class="icon">
-                                                    <i class="et-line icon-profile-male"></i>
-                                                </div>
-                                                <h4>Berprestasi<br>Aktif</h4>
-                                                <p>Mahasiswa teraktif dengan poin JSDP terbanyak (824)</p>
-                                            </div>
-                                        </a>
-                                    </div>  
-                                </div>
-                                <div class="col-md-3 col-lg-4 col-xs-12 col-sm-12" id="awardlast">
-                                    <div class="service-hex" id="service2">
-                                        <a href="documents/TOEIC - Anak Agung Ngurah Krisnanda Putra.pdf" target="_blank">
-                                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372 424.5" style="enable-background:new 0 0 372 424.5;" xml:space="preserve">
-                                                <g>
-                                                    <polygon class="st0" points="359.9,314.1 186.9,414 14,314.1 14,114.4 186.9,14.6 359.9,114.4"/>
-                                                    <polygon class="st1" points="331.2,297.6 186.9,380.9 42.6,297.6 42.6,131 186.9,47.6 331.2,131"/>
-                                                </g>
-                                            </svg>
-                                            <div class="content"style="width: 160px;">
-                                                <div class="icon">
-                                                    <i class="et-line icon-profile-male"></i>
-                                                </div>
-                                                <h4>Nilai TOEFL</h4>
-                                                <p>Nilai TOEFL sebesar 680</p>
-                                            </div>
-                                        </a>
-                                    </div>
-                                </div>       
                             </div>
                         </div>
                     </div> <!-- /.container -->
