--- a/themes/phantom/dark/index.html
+++ b/themes/phantom/dark/index.html
@@ -62,7 +62,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title home text-center" style="margin-bottom: 50px;">
                                     <!-- <img src="img/phantom.png" alt=""> -->
-                                    <img class="mt-5" src="img/agung.jpg" style="width: 200px; height: 200px; border-radius: 50%;">
+                                    <img class="mt-5" src="img/agung4.2.jpg" style="width: 200px; height: 200px; border-radius: 50%;">
                                     <h1 style="font-family: impact; color: #a7ab97;">ANAK AGUNG NGURAH KRISNANDA PUTRA</h1>
                                     <p>- Fresh graduate jurusan Informatika -</p>
                                     <!-- <p> yang memiliki IPK 3.6, mendapatkan predikat cumlaude, dan memahami beberapa hal dibidang IT, seperti HTML, Bootstrap, framework Vue JS, Laravel, CodeIgniter, dan Flutter. Saya juga menguasai berbagai hal dibidang lain mulai dari Adobe XD, Illustrator, Public Speaking hingga Taekwondo.</p> -->
