--- a/themes/phantom/dark/project.html
+++ b/themes/phantom/dark/project.html
@@ -89,7 +89,7 @@
                                 <h3>PT. Cakrawala Semesta</h2>
                                 <h4>- Website Company Profile -</h4>
                                 <br>
-                                <p>Website ini memiliki beberapa informasi, seperti partner dan klien perusahaan, syarat dan ketentuan calon pegawai, kontak perusahaan dan informasi umum lainnya</p>
+                                <p>Website ini memiliki beberapa informasi, seperti partner dan klien perusahaan, syarat dan ketentuan calon pegawai, kontak perusahaan dan informasi umum lainnya.</p>
                                 <p>Spesifikasi Website: CodeIgniter, Bootstrap, MySql</p>
                             </div>
                         </div>
